acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/enum/A1.swift
let k: Kotlin_ = KotlinKt.a()

switch k {
case .a:
    exit(0)
}
